--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page5.html">About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page7.html">Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html">Reviews</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">Contact</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.facebook.com/Barrett-Insurance-202507443153218/" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://twitter.com/barrettinsure" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.instagram.com/barrettinsurance/" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.linkedin.com/in/barrett-insurance-b91b934a" target="_blank"><span class="socicon socicon-linkedin mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+1-234-567-8901">Call us today! (517) 849-1000
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page2.html">Call us today! (517) 849-1000
                     </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
 
     
 
@@ -299,7 +299,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qp4/98nfUwln0ek8xZJpfs4irijxd8MzxIcAi6cNe7WOMW/gjyN9At9viLCoCInLdMqb1PgUJFg+KBbixBcc18GeDIMpg7yFyT/cCaWTVXJ38GR73bOLHC6+GgYJygrp">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iMGz9uirZcZ1jt5e/xhqmyDsFpmVi1Be3w9Tr3b/1CR+ivKoj4J1eQ2JsJfoEerMZAizM/uqqsYXf7EuO+DPYWaRsGrBeXkkWzvh6R1vx27878lsUmqmWPfPbktHAmP3">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
