--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -100,7 +100,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nIH/HkrxIImU97ESD/jkjb9B6VQ+zl69UB+yzTfUevACjWqZi1iTJ1c5A+RGj9x40Zd67X8La4Lwar/+KhwBUdQc4E5tzK3m0YGJzopG34tF0y4x2B9cnptzUk29yGc2">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lBm2lFEuZ3bHhr4Cd6wA95DfQcfC38uH1GhMyelmje2KBgLccaVePY/xF4Gnx6kwS5VhUK+8XZnHD6mh1VPKGSt0OhnfTYt6qY/1aoevItySWzlnNDVXqMm6WvL6FYQo">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
