--- a/page6.html
+++ b/page6.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="mbr-section content5 cid-r6ybEqrfwP" id="content5-46">
+<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="mbr-section content5 cid-r6ybEqrfwP" id="content5-46">
 
     
 
@@ -79,7 +79,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5"><p><strong>Here is what our customers have to say:</strong></p></div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5"><p>Here is what our customers are saying:</p></div>
         </div>
     </div>
 </section>
