--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -100,7 +100,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Me9qoWMVYxc/4p95saDK5M4AGCe0bNT98Vys23nGQE708MxG8cFpD9bPDthuNdphFKkxvprPFcuaB0F0wJp900FW3H6rOYI0+OO6tdZXiyssgBKQMQtsSuNqcRiLInR1">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zmriCwomHE9lFX45+mH1l9B11JIrF3v2SBIa6xy7IuMZXG64xtwCdo3PaDPDiVsWHTAXiTjeTPnOKSVMqzwMaPUz9jM+VAdm3diMjnodq2tGzUI7W6YpZx0QCIhOtCuP">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
