--- a/page7.html
+++ b/page7.html
@@ -46,14 +46,14 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page5.html">About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page7.html">Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html">Reviews</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">Contact</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.facebook.com/Barrett-Insurance-202507443153218/" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://twitter.com/barrettinsure" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.instagram.com/barrettinsurance/" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.linkedin.com/in/barrett-insurance-b91b934a" target="_blank"><span class="socicon socicon-linkedin mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page8.html">About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page7.html">Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html">Reviews</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">Contact</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.facebook.com/Barrett-Insurance-202507443153218/" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://twitter.com/barrettinsure" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.instagram.com/barrettinsurance/" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.linkedin.com/in/barrett-insurance-b91b934a" target="_blank"><span class="socicon socicon-linkedin mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page2.html">Call us today! (517) 849-1000
                     </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content5 cid-r6zFIJD3CJ" id="content5-3r">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section content5 cid-r6zFIJD3CJ" id="content5-3r">
 
     
 
@@ -293,7 +293,7 @@
                 <h5 class="pb-3">
                     Links
                 </h5>
-                <p class="mbr-text"><strong><a href="index.html" class="text-black">Home</a><br><a href="page5.html" class="text-black">About Us</a><br><a href="page4.html" class="text-black">Products</a><br><a href="page4.html" class="text-black">Media</a></strong><br><a href="page6.html" class="text-black">Reviews</a><br><a href="page7.html" class="text-black">Community</a><a class="text-primary" href="https://mobirise.co/"><br></a>
+                <p class="mbr-text"><strong><a href="index.html" class="text-black">Home</a><br><a href="page8.html" class="text-black">About Us</a><br><a href="page4.html" class="text-black">Products</a><br><a href="page4.html" class="text-black">Media</a></strong><br><a href="page6.html" class="text-black">Reviews</a><br><a href="page7.html" class="text-black">Community</a><a class="text-primary" href="https://mobirise.co/"><br></a>
                 </p>
             </div>
         </div>
